--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@ body {
     margin-top: 20px;
     padding: 20px;
   }
-  
+  .buttons button:hover{
+    cursor: pointer;
+  }
   button {
     width: 50px;
     height: 50px;
